--- a/iterative-portfolio.html
+++ b/iterative-portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Responsive Redesign</title>
+        <title>Iterative Design</title>
         <link rel="stylesheet" href="iterative-portfolio.css" /> 
     </head>
 
