changed size of image

--- a/iterative-portfolio.html
+++ b/iterative-portfolio.html
@@ -58,7 +58,7 @@
                     <div>
                         <p><b>Set #3:</b> Sketches of each page & user's thoughts. Users of Ole typically want to shop for new clothes but find
                             in-person shopping tiring.</p>
-                        <img src="source/Eileen_sketch.png" alt="image' - front" width=100%>
+                        <img src="source/Eileen_sketch.png" alt="image' - front" width=100% style="width: 40rem; height: 30rem;">
                     </div>
                 </div>
                 <div id="image_box">
